:adhesive_bandage::iphone:FriendShip fix  about spacing 2 :iphone::adhesive_bandage:

--- a/src/components/FriendshipEndedWithMudarsirNowSalmanIsMyBestFriend/FriendshipEndedWithMudarsirNowSalmanIsMyBestFriend.css
+++ b/src/components/FriendshipEndedWithMudarsirNowSalmanIsMyBestFriend/FriendshipEndedWithMudarsirNowSalmanIsMyBestFriend.css
@@ -280,7 +280,7 @@ p {
 
   .friendshipText2 {
     position: absolute;
-    width: 24vw;
+    width: 21vw;
     height: 7.1vh;
     left: 156.9vw;
     top: 42vh;
